fixed collapse bug

--- a/style.css
+++ b/style.css
@@ -194,7 +194,7 @@ ul ul a{
 /**** CSS FOR WELCOME PAGE ******/
 #content .intro{
     color: white;
-    position: fixed;
+    position: relative;
     top: 35%;
 }
 
@@ -204,12 +204,12 @@ ul ul a{
 }
 
 #content .intro-description{
-    font-size: 2em;
+    font-size: 1.65em;
     font-weight: 300;
 }
 
 #content .intro-description strong{
-    font-weight: 400;
+    font-weight: 500;
 }
 /* CSS for DAYMODE WELCOME PAGE */
 #content.daymode .intro{
@@ -229,7 +229,7 @@ ul ul a{
 
 /* DAYMODE SETTINGS */
 #sidebar.daymode{
-    background: rgba(241,241,241,0.5);
+    background: rgba(241,241,241,0.7);
     color: #3f3f3f;
 }
 #sidebar.daymode ul li a{
